<resources>
    <string name="app_version">Ver 3.3.0</string>
    <string name="app_name">BSA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_students_list">Students in Batch</string>
    <string name="title_activity_student_maint">Student Details</string>
    <string name="title_activity_fee_maint">Fee Maintenance</string>
    <string name="title_activity_batch_maint">Batch Maintenance</string>
    <string name="msg_fee_rcvd">Dear Parents,thank you for making fee payment for $lstName($batchStr) for $period Month(s)\n~Team BSA-Gymnastics</string>
    <string name="search_hint">"Search student name"</string>
    <string name="title_activity_search_results"> </string>
    <string name="action_attendance">Report attendance</string>
    <string name="action_report_new">Report new student/s</string>
    <string name="action_remind">Send Fee Reminder</string>
    <string name="action_select_remind">Select For Fee Reminder</string>
    <string name="action_sms">SMS</string>
    <string name="action_filterStudents">Filter Students</string>
    <string name="key_reminder_msg">Dear Parents ,a gentle reminder for payment of Monthly fees for $kidName. Please ignore if already paid. Thank you for your co-operation\n\n ~Team BSA-Gymnastics </string>
    <string name="sms_msg_success">Message has been sent to Manasi Mam</string>
    <string name="msg_subscription_extended">Expiry date of subscription is extended</string>
    <string name="title_action_sms">SMS</string>
    <string name="title_action_filterStudents">Filter Students</string>
    <string name="key_m_no">M_KEY</string>
    <string name="err_user_not_permitted">"User action not permitted"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="summary_about">Beyond Sports Academy Gymnastics Coaching</string>
    <string name="no_title">Key</string>
    <string name="no_summary">Summary Text</string>
    <string name="no_dialog_title">Key Entry</string>
    <string name="refresh_summary">Refresh File ?</string>
    <string name="key_refresh">KEY_refresh_bt</string>
    <string name="refresh_title">Refresh Student List</string>
    <string name="refresh_dialog_title">Refresh Input</string>
    <string name="pref_header_about">About</string>
    <string name="sms_ph_no">9820112743</string>
    <string name="max_stu_in_batch">22</string>

    <string name="login_domain">"@bsa.com"</string>
    <string name="title_version">Version</string>
    <string name="summary_release_notes">1. Batchwise Account Summary 2. About screen changes</string>
    <string name="title_release_notes">Release Notes</string>
    <string name="action_actn_summary">Account Summary</string>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_array">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string name="title_activity">Beyond Sports Academy (BSA)</string>
    <string name="title_activity_test">Student Details</string>
    <string name="lbl_rb_new_batch">Create New</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_add">Add</string>
    <string name="lbl_edit_fname">First Name</string>
    <string name="lbl_dob">DOB-MM/YYYY</string>
    <string name="lbl_edit_lname">Last Name</string>action_export
    <string name="lbl_coach_name">Permitted Coach List</string>action_export
    <string name="lbl_edit_contact">Contact</string>
    <string name="lbl_level">Level</string>
    <string name="lbl_batch_name">Batch Name</string>
    <string name="lbl_edit_cfee">C.Fee</string>
    <string name="lbl_edit_jfee">500</string>
    <string name="lbl_fee_status">Till</string>
    <string name="lbl_fee_rcvd_dt">On</string>
    <string name="lbl_rg_batch">Batch</string>
    <string name="lbl_rb_existing_batch">Add to Existing</string>
    <string name="lbl_hint_bname">Batch</string>
    <string name="lbl_chk_joining_fee">Joining kit</string>
    <string name="lbl_mnu_joining_kit_paid">Joining Kit paid</string>
    <string name="lbl_batch">Choose Batch</string>
    <string name="lbl_coach">Choose Coach</string>
    <string name="title_activity_fee_maintenance">Fee Maintenance</string>
    <string name="action_manage_fees">Manage Fees</string>
    <string name="action_manage_batch">Manage Batch</string>
    <string name="cancel_selection">Cancel</string>
    <string name="lbl_update_existing_fees">Update/Delete Fees</string>
    <string name="lbl_add_new_fees">Add new Fees</string>
    <string name="err_invalid_sel_joining_fee">"Invalid selection - fees already updated for"</string>
    <string name="error">"Error"</string>
    <string name="err_number_format">"Error with Fee amount"</string>
    <string name="err_selection">"Please select Students for action"</string>
    <string name="err_SMS_permission">"Please enable SMS permissions"</string>
    <string name="err_login">Login Failed - please verify email and password</string>
    <string name="err_login_validation">"Failed checks - please verify before submitting again!"</string>
    <string name="err_sms">"Error sending SMS"</string>
    <string name="action_refresh">Refresh</string>
    <string name="lbl_months_paid_for">Months paid for</string>
    <string name="action_acnt_summary">Account Summary</string>
    <string name="action_levelwise_summary">Level Summary</string>
    <string name="title_activity_preference">Settings</string>
    <string name="three_mnth_adjustment">500</string>
    <string name="six_mnth_adjustment">1200</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
