<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.bsa.BatchListActivity">

    <item
        android:id="@+id/action_account_summary"
        android:orderInCategory="1"
        android:title="@string/action_acnt_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_levelwise_summary"
        android:orderInCategory="2"
        android:title="@string/action_levelwise_summary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fees"
        android:orderInCategory="3"
        android:title="@string/action_manage_fees"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_student"
        android:orderInCategory="4"
        android:title="Add Student"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="5"
        android:title="Sign out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/divider"
        android:title="-"
        android:enabled="false"
        android:orderInCategory="6"
        android:icon="@android:drawable/divider_horizontal_bright"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="7"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="8"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="9"
        android:title="Export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="10"
        android:title="Import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_batch"
        android:orderInCategory="11"
        android:title="@string/action_manage_batch"
        app:showAsAction="never"/>
</menu>
