<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.spa.BatchMaintenanceActivity"
    android:id="@+id/contentBatchMaintLayout"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/batch_lst"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/txt_batch"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_batch"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_coach_lst"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batch_lst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_coach_name"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_coach_name"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lst_coach"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/txt_coach_lst" >

        <AutoCompleteTextView
            android:id="@+id/txt_coach"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_coach"
            app:layout_constraintStart_toStartOf="parent"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--<com.androidbuts.multispinnerfilter.MultiSpinnerSearch
        android:id="@+id/multipleItemSelectionSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:hintText="Multiple Selection Spinner"
        app:layout_constraintTop_toBottomOf="@+id/batch_lst" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
