<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.bsa.StudentMaintActivity"
    tools:showIn="@layout/activity_student_maint"
    android:id="@+id/stuMaintenanceContentLayout"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_fname1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_fname"
            style="@style/BSAText"
            android:layout_width="120dp"
            android:hint="@string/lbl_edit_fname"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_lname1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/txt_edit_fname1"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_lname"
            style="@style/BSAText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:hint="@string/lbl_edit_lname"
            app:layout_constraintStart_toEndOf="@+id/txt_edit_fname1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_contact1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/txt_edit_fname1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_fname1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_contact"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_edit_contact"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/txt_edit_contact1"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_fname1"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_bday1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintStart_toStartOf="@+id/txt_edit_lname1"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_lname1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_bday"
            style="@style/BSAText"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:hint="@string/lbl_dob" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_bname1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintStart_toStartOf="@id/txt_edit_contact1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_contact1">

        <AutoCompleteTextView
            android:id="@+id/txt_edit_bname"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_hint_bname"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sp_level1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/txt_edit_bname1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_bname1">

        <AutoCompleteTextView
            android:id="@+id/sp_level"
            style="@style/BSAText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_level"
            app:layout_constraintStart_toStartOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_cfee1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/sp_level1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_bname1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_cfee"
            style="@style/BSAText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_edit_cfee"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_joining_fee"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/txt_edit_cfee1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_bname1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_edit_jfee1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_bname1"
        app:layout_constraintLeft_toRightOf="@id/chk_joining_fee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edit_jfee"
            style="@style/BSAText"
            android:layout_width="80dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            android:hint="@string/lbl_chk_joining_fee" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_Jfee_dt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/sp_fee_month1"
        app:layout_constraintStart_toStartOf="@+id/chk_joining_fee" />

    <!-- Start og FEEE STATUSSSSSSSS- -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lbl_fee_status"
        style="@style/BSAText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_fee_status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_cfee1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sp_fee_month1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/lbl_fee_status"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_cfee1">

        <AutoCompleteTextView
            android:id="@+id/sp_fee_month"
            style="@style/BSAText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/lbl_fee_status"
            app:layout_constraintTop_toBottomOf="@id/txt_edit_cfee1"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sp_fee_year1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/sp_fee_month1"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_cfee1">

        <AutoCompleteTextView
            android:id="@+id/sp_fee_year"
            style="@style/BSAText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/sp_fee_month1"
            app:layout_constraintTop_toBottomOf="@id/txt_edit_cfee1"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- END OF og FEEE STATUSSSSSSSS - -->


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lbl_fee_rcvd_dt"
        style="@style/BSAText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_fee_rcvd_dt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fee_status" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fee_rcvd_month1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/lbl_fee_rcvd_dt"
        app:layout_constraintTop_toBottomOf="@id/sp_fee_month1">

        <AutoCompleteTextView
            android:id="@+id/fee_rcvd_month"
            style="@style/BSAText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/lbl_fee_rcvd_dt"
            app:layout_constraintTop_toBottomOf="@id/sp_fee_month1"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fee_rcvd_year1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/fee_rcvd_month1"
        app:layout_constraintTop_toBottomOf="@id/sp_fee_year1">

        <AutoCompleteTextView
            android:id="@+id/fee_rcvd_year"
            style="@style/BSAText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fee_rcvd_month1"
            app:layout_constraintTop_toBottomOf="@id/sp_fee_year1"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_bank_ref1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fee_rcvd_month1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_bank_ref"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            android:hint="Bank reference text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fee_rcvd_month1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_skill_ref1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/txt_bank_ref1"
        app:layout_constraintTop_toBottomOf="@id/fee_rcvd_month1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_skill_ref"
            style="@style/BSAText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            android:hint="Notes"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/btn_save_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_save_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/txt_skill_ref1"
        app:layout_constraintTop_toBottomOf="@id/fee_rcvd_month1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
